# src/auth/dto/login.dto.ts
@@ -1,0 +1,6 @@
+import { ApiTags, ApiOperation, ApiProperty } from '@nestjs/swagger';
+
+export class LoginDto {
+    @ApiProperty({ example: 'infoteam@gmail.com' }) email!: string;
+    @ApiProperty({ example: 'password123' }) password!: string;
+}
